Added more truth

--- a/ray-test/jake-vs-raymundo.html
+++ b/ray-test/jake-vs-raymundo.html
@@ -18,7 +18,7 @@
         <div class="inner-wrap">
           <p>0</p>
           <button>Kings Win</button>
-          <h1>No shit, the kings always win.</h1>
+          <h1>No shit, the kings always win.  I mean like always.</h1>
         </div>
       </div>
     </div>
