--- a/San_Diego_Golf/GOLF-WHYP.html
+++ b/San_Diego_Golf/GOLF-WHYP.html
@@ -130,13 +130,27 @@
 			</div>
 			<div id="join" class="hole clearfix">
 				<div id="mt_signup">
-					<a href="https://www.golfzing.com/pcmissiontrails" target="_blank"><img src="img/mt_pc.png"></a>		
+					<a href="https://www.golfzing.com/pcmissiontrails" target="_blank"><img src="img/mt_pc.png"></a>
+				</div>
+				<div id="join_buttons">		
 					<button id="ads_btn"><a href="https://www.missiontrailsgc.com/golf-tee-times?quicktabs_3=0&dt=20180313&st=0500&et=0600" target="_blank">BOOK A TEE TIME!</a></button>
-					<button id="date" onclick="displayDate()">Get Today's Date</button>
+					<button id="date" onclick="displayDate()">Get Today's Date</button>	
+				</div>
+				<div id="social_media" class="clearfix">
 					<a href="https://twitter.com/Missiontrailsgc" target="_blank"><img class="social_media twitter" src="img/twitter1.png"></a> 
 					<a href="https://www.facebook.com/missiontrailsgc/" target="_blank"><img class="social_media facebook" src="img/facebook.png"></a> 
 				</div>
 			</div>
+			<div id="get_weather" class="clearfix">
+				<div><button class="get_weather">show me the weather</button></div>
+					<div id="result" style="display: none">
+					    <div id="icon"></div>
+					    <div id="city"><strong></strong></div>
+					    <div id="weather"></div>
+					    <div id="time"></div>
+					    <div><button class="hide">Hide</button></div>
+					</div>
+				</div>
 			<div id="section_wrap" class="content clearfix">
 				<section id="course_one" class="courses clearfix">
 					<div id="hole_10" class="hole clearfix">
