--- a/San_Diego_Golf/Coronado.html
+++ b/San_Diego_Golf/Coronado.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>GOLF: Coronado</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="css/golf.css">
 		<link href="https://fonts.googleapis.com/css?family=Mina|Poppins" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="js/golf.js" type="text/javascript"></script>
+		<script src="js/golf.js"></script>
+		<title>GOLF: Coronado Municiple Golf Course</title>
 	</head>
 	<body>
 		<div id="wrapper">
-			<div id="header_wrap" class="clearfix">
-				<header class="clearfix">
-					<div id="header_title_coronado" class="clearfix">
-						<h1 id="location">San Diego Golf</h1>
-						<h2 id="coronado_header">Play on the island!</h2>
-					</div>
-					<div id="nav_bar" class="clearfix">
+			<div id="header_wrap">
+				<header class="header">
+					<nav id="nav_bar">
 						<ul>
 							<li><a href="../San_Diego_Golf/GOLF-WHYP.html#">Mission Trails</a></li>
 							<li><a href="../San_Diego_Golf/Coronado.html">Coronado</a></li>
@@ -25,9 +23,22 @@
 							<li><a href="../San_Diego_Golf/Carmel_Mountain_Ranch.html">Carmel Mountain Ranch</a></li>
 							<li><a href="../San_Diego_Golf/Riverwalk.html">Riverwalk</a></li>
 						</ul>
+					</nav>
+					<div class="select_container">
+						<h2 class="select_heading">San Diego Golf</h2>
+						<select>
+							<option value="" selected="selected">Select Course</option>
+							<option value="../San_Diego_Golf/GOLF-WHYP.html">Mission Trails</option>
+							<option value="../San_Diego_Golf/Coronado.html">Coronado</option>
+						</select>
 					</div>
 				</header>
 			</div>
+
+			<div id="header_title_coronado" class="banner">
+				<h1 id="location">San Diego Golf</h1>
+			</div>
+
 			<div id="ads" class="clearfix">		
 				<a href="https://www.globalgolf.com/"><img src="img/globalgolf.png"></a>
 				<h4>click here to get the lowest prices on both NEW and USED equipement and apparel</h4>
@@ -36,8 +47,8 @@
 				<section id="course_one" class="courses clearfix">
 					<h2 id="MT">Coronado Municipal GC</h2>
 					<div id="scorecard">
-						<h3>mouse over to enlarge</h3>
-						<img src="../Desktop/coronado_sc.png">
+						<h3 id="msovr">mouse over to enlarge</h3>
+						<img id="scrcrd" src="img/coronado_sc.png">
 					</div>
 					<div id="hole_1" class="hole clearfix">
 						<div id="hole1_cor_imgs" class="hole_imgs">
@@ -194,19 +205,5 @@
 				<h2 id="footer">All Rights Reserved.</h2>
 			</footer>
 		</div>
-		
-<script type="text/javascript">
-window.onload = function()
-{
-    if (window.jQuery)
-    {
-        alert('jQuery is loaded');
-    }
-    else
-    {
-        alert('jQuery is not loaded');
-    }
-}
-</script>
 	</body>
 </html>
