added new div in weather result div

--- a/San_Diego_Golf/GOLF-WHYP.html
+++ b/San_Diego_Golf/GOLF-WHYP.html
@@ -44,8 +44,9 @@
 				<h4>click here to get current deals on San Diego courses</h4>
 			</div>
 			<div id="get_weather" class="clearfix">
-					<div><button class="get_weather">is this golf weather?</button></div>
+					<div><button class="get_weather">is the current weather good for golf?</button></div>
 						<div id="result">
+							<div id="answer">it is always golf weather!</div>
 					    	<div id="icon"></div>
 					    	<div id="city"><strong></strong></div>
 					    	<div id="weather"></div>
