made Bonita.html mirror home page and styled #join in css

--- a/San_Diego_Golf/Coronado.html
+++ b/San_Diego_Golf/Coronado.html
@@ -122,11 +122,15 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis commodo tincidunt. Donec est purus, consectetur eget cursus in, dignissim a arcu. Nunc eu fringilla elit. Morbi tempus, quam in malesuada semper, nisi quam blandit ex, a dapibus metus ipsum a ante. Proin mollis bibendum risus sit amet malesuada. Vestibulum sagittis semper tortor, vel placerat risus viverra sed. Curabitur quis imperdiet sapien. Maecenas et nisi risus. Aliquam diam odio, condimentum et vulputate sed, vulputate quis magna. Vivamus commodo, elit non tincidunt scelerisque, lacus mauris eleifend metus, ac rutrum orci velit in odio. Cras sed felis ac lorem vestibulum convallis. Fusce lacinia porttitor ultricies. Nunc ac lorem et metus tincidunt aliquet. Donec sit amet mi eget eros maximus placerat a vitae ex.</p>
 						</div>
 					</div>
-					<div id="join" class="hole clearfix">
-						<div id="coronado_signup"
-							<a href="http://www.coronadogolfshop.com/"><img src="img/coronado_logo.png"></a>
-						</div>
-					</div>
+				</section>
+			</div>
+			<div id="join" class="hole clearfix">
+				<div id="coronado_signup">
+					<a href="http://www.coronadogolfshop.com/"><img src="img/coronado_logo.png" target="_blank"></a>
+				</div>
+			</div>
+			<div id="section_wrap" class="content clearfix">
+				<section id="course_one" class="courses clearfix">		
 					<div id="hole_10" class="hole clearfix">
 						<div id="hole10_cor_imgs" class="hole_imgs">
 							<img class="hole_map" src="../Desktop/mt_hole10.png">
