updated Resume html and css and added imgages

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -3,16 +3,42 @@
     <head>
       <title>Raymond Martinez' Resume</title>
       <link rel="stylesheet" href="css/resume.css">
+      <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato:400i" rel="stylesheet">
     </head>
+    <header class="clearfix">
+      <div id="header_content_container">
+        <div class="intro">
+          <span>Hello, my name is Raymond Martinez</span>
+        </div>
+        <div class="what_i_do">
+          & I can develop your front end.
+        </div> 
+      </div>
+    </header>
     <body>
-      <img src="http://placeimg.com/200/200/animals" alt="Raymond Martinez, Web Developer" Class="main-image">
-        <h1>Raymond Martinez, Web Developer</h1>
-        <h2 class="section-title">Summary of Qualifications</h2>
-        <ul>
-          <li>Low cheese, top corns</li>
-          <li>Can really rip rope</li>
-          <li>Greasy biscuits</li>
-          <li>Wicked Cellies</li>
-        </ul>
+      <div class="one">
+        <div class="one_heading">I may be new, but I'm the right fit for you.</div>
+        <div class="work clearfix">
+          <div class="work1">
+            <p>I can help you create what the client loves<br> or discover new trends in marketing.</p>
+          </div>
+          <div class="work2">
+            <p>Knowledgeable in</p>
+            <ul>
+              <li>html</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="two">
+        <div>
+        </div>
+      </div>
+      <div class="three"></div>
     </body>
+    <footer>
+      <h2>Created by me 2018.</h2>
+    </footer>
   </html>
