--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -4,6 +4,8 @@
       <title>Raymond Martinez' Resume</title>
       <link rel="stylesheet" href="css/resume.css">
       <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato:400i" rel="stylesheet">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script src="JS/resume.js"></script>
     </head>
     <header class="clearfix">
       <div id="header_content_container">
@@ -33,7 +35,48 @@
         </div>
       </div>
       <div class="two">
-        <div>
+        <p class="two_p">What I've currently been working on</p>
+        
+        <div id="showContainer">
+
+          <div class="imageContainer" id="im_1">
+            <img src="img/Golf.png">
+            <div class="caption">
+              Main Page
+            </div>
+          </div>
+
+          <div class="imageContainer" id="im_2">
+            <img src="img/Golf2.png">
+            <div class="caption">
+              Course beginning
+            </div>
+          </div>
+
+          <div class="imageContainer" id="im_3">
+            <img src="img/Golf3.png">
+            <div class="caption">
+              Sign-up and/or book a tee time
+            </div>
+          </div>
+
+          <div class="imageContainer" id="im_4">
+            <img src="img/Weather_API.png">
+            <div class="caption">
+              San Diego Weather API
+            </div>
+          </div>
+
+          <div class="imageContainer" id="im_5">
+            <img src="img/Weather_API2.png">
+            <div class="caption">
+              Current Weather
+            </div>
+          </div>
+
+          <div class="navButton" id="previous">&#10094;</div>
+          <div class="navButton" id="next">&#10095;</div>
+
         </div>
       </div>
       <div class="three"></div>
