added images and changed styles on .one

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -19,24 +19,30 @@
     </header>
     <body>
       <div class="one">
-        <div class="one_heading">I may be new, but I'm the right fit for you.</div>
+        <div class="one_heading">Why I'm the right fit for you.</div>
         <div class="work clearfix">
           <div class="work1">
+            <div class="work_img"><img src="img/lightbulb.png"></div>
             <p>I can help you create what the client loves<br> or discover new trends in marketing.</p>
           </div>
           <div class="work2">
-            <p>Knowledgeable in</p>
+            <div class="work_img"><img src="img/code1.png"></div>
+            <p>What I use to create!</p>
             <ul>
-              <li>html</li>
+              <li>HTML</li>
               <li>CSS</li>
               <li>JavaScript</li>
+              <li>...& a little bit of PhotoShop</li>
             </ul>
+          </div>
+          <div class="work3">
+            
           </div>
         </div>
       </div>
       <div class="two">
         <p class="two_p">What I've currently been working on</p>
-        
+
         <div id="showContainer">
 
           <div class="imageContainer" id="im_1">
@@ -83,5 +89,10 @@
     </body>
     <footer>
       <h2>Created by me 2018.</h2>
+      <div class="footer_imgs">
+        <img src="img/twitter.png">
+        <img src="img/github.png">
+        <img src="img/linkedIn.png">
+      </div>
     </footer>
   </html>
