added an email form to .three and styled with css

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -85,7 +85,17 @@
 
         </div>
       </div>
-      <div class="three"></div>
+      <div class="three">
+
+        <form method="post" name="contact_form" action="contact-form-handler.php">
+          <input type="text" name="name" placeholder="Name:">
+          <input type="text" name="company" placeholder="Company:">
+          <input type="text" name="email" placeholder="Email Address:">
+          <textarea name="message" placeholder="Message:"></textarea>
+          <input class="submit_button" type="submit" value="Submit">
+        </form>
+
+      </div>
     </body>
     <footer>
       <h2>Created by me 2018.</h2>
