--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -87,6 +87,8 @@
       </div>
       <div class="three">
 
+        <h2 class="form_heading">Please feel free to contact me.</h2>
+
         <form method="post" name="contact_form" action="contact-form-handler.php">
           <input type="text" name="name" placeholder="Name:">
           <input type="text" name="company" placeholder="Company:">
