attempted to add PhP then deleted it.

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -102,9 +102,9 @@
     <footer>
       <h2>Created by me 2018.</h2>
       <div class="footer_imgs">
-        <img src="img/twitter.png">
-        <img src="img/github.png">
-        <img src="img/linkedIn.png">
+        <a href="https://twitter.com/?logged_out=1&lang=en" target="_blank"><img src="img/twitter.png"></a>
+        <a href="https://github.com/rcmartinez54" target="_blank"><img src="img/github.png"></a>
+        <a href="https://www.linkedin.com/in/raymond-martinez-20038693/" target="_blank"><img src="img/linkedIn.png"></a>
       </div>
     </footer>
   </html>
