added media queries and changed font color on .two

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -28,12 +28,8 @@
           <div class="work2">
             <div class="work_img"><img src="img/code1.png"></div>
             <p>What I use to create!</p>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>...& a little bit of PhotoShop</li>
-            </ul>
+            <p>HTML / CSS / JavaScript<br>...& a litte bit of PhotoShop</p>
+            <p class="hide">HTML, CSS, JavaScript, ...& a little bit of PhotoShop.</p>
           </div>
           <div class="work3">
             
@@ -96,6 +92,8 @@
           <textarea name="message" placeholder="Message:"></textarea>
           <input class="submit_button" type="submit" value="Submit">
         </form>
+
+
 
       </div>
     </body>
