added multiple images for new background on .two

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -7,7 +7,15 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="JS/resume.js"></script>
     </head>
-    <header class="clearfix">
+    <header class="clearfix scroll_container">
+      <nav>
+        <ul>
+          <li class="home" onclick="scrollTo()">Home</li>
+          <li class="about"><a href=".one">About</a></li>
+          <li class="contact"><a href=".three">Contact</a></li>
+          <li class="projects"><a href=".two">Projects</a></li>
+        </ul>
+      </nav>
       <div id="header_content_container">
         <div class="intro">
           <span>Hello, my name is Raymond Martinez</span>
