changed image width in slideshow and added classes to them in the html

--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -50,35 +50,35 @@
         <div id="showContainer">
 
           <div class="imageContainer" id="im_1">
-            <img src="img/Golf.png">
+            <img class="slide_img" src="img/Golf.png">
             <div class="caption">
               Main Page
             </div>
           </div>
 
           <div class="imageContainer" id="im_2">
-            <img src="img/Golf2.png">
+            <img class="slide_img" src="img/Golf2.png">
             <div class="caption">
               Course beginning
             </div>
           </div>
 
           <div class="imageContainer" id="im_3">
-            <img src="img/Golf3.png">
+            <img class="slide_img" src="img/Golf3.png">
             <div class="caption">
               Sign-up and/or book a tee time
             </div>
           </div>
 
           <div class="imageContainer" id="im_4">
-            <img src="img/Weather_API.png">
+            <img class="slide_img" src="img/Weather_API.png">
             <div class="caption">
               San Diego Weather API
             </div>
           </div>
 
           <div class="imageContainer" id="im_5">
-            <img src="img/Weather_API2.png">
+            <img class="slide_img" src="img/Weather_API2.png">
             <div class="caption">
               Current Weather
             </div>
