--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -7,13 +7,13 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="JS/resume.js"></script>
     </head>
-    <header class="clearfix scroll_container">
+    <header id="home" class="clearfix scroll_container">
       <nav>
         <ul>
-          <li class="home" onclick="scrollTo()">Home</li>
-          <li class="about"><a href=".one">About</a></li>
-          <li class="contact"><a href=".three">Contact</a></li>
-          <li class="projects"><a href=".two">Projects</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#projects">Projects</a></li>
         </ul>
       </nav>
       <div id="header_content_container">
@@ -26,7 +26,7 @@
       </div>
     </header>
     <body>
-      <div class="one">
+      <div id="about" class="one">
         <div class="one_heading">Why I'm the right fit for you.</div>
         <div class="work clearfix">
           <div class="work1">
@@ -44,7 +44,7 @@
           </div>
         </div>
       </div>
-      <div class="two">
+      <div id="projects" class="two">
         <p class="two_p">What I've currently been working on</p>
 
         <div id="showContainer">
@@ -89,7 +89,7 @@
 
         </div>
       </div>
-      <div class="three">
+      <div id="contact" class="three">
 
         <h2 class="form_heading">Please feel free to contact me.</h2>
 
