--- a/San_Diego_Golf/Goat_Hill.html
+++ b/San_Diego_Golf/Goat_Hill.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Mina|Poppins" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script src="js/golf.js"></script>
-		<title>GOLF: Where Have You Played?</title>
+		<title>GOLF: Goat Hill</title>
 	</head>
 	<body>
 		<div id="wrapper">
