--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -13,9 +13,9 @@
       <header id="home" class="clearfix scroll_container">
         <nav>
           <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <a href="#about"><li>About</li></a>
+            <a href="#projects"><li>Projects</li></a>
+            <a href="#contact"><li>Contact</li></a>
           </ul>
         </nav>
         <div id="header_content_container">
