updated weather js to show on page load. added weather plugin

--- a/Weather/Weather.html
+++ b/Weather/Weather.html
@@ -13,13 +13,12 @@
   <h1>San Diego Weather</h1>
 </header>
 
-  <div><button class="get_weather">show me the weather</button></div>
-  <div id="result" style="display: none">
+  
+  <div id="result">
     <div id="icon"></div>
     <div id="city"><strong></strong></div>
     <div id="weather"></div>
-    <div id="time"></div>
-    <div><button class="hide">Hide</button> 
+    <div id="time"></div> 
   </div>
 
 
