added js to animate #get_weather. added new img

--- a/San_Diego_Golf/Coronado.html
+++ b/San_Diego_Golf/Coronado.html
@@ -36,7 +36,16 @@
 			</div>
 
 			<div id="header_title_coronado" class="banner">
-				<h1 id="location">San Diego Golf</h1>
+				<h1 id="location">Golfing in San Diego</h1>
+				<div id="weather_tab"><h4>Get local weather</h4></div>
+				<div id="get_weather" class="clearfix">
+					<ul id="result">
+				    	<li id="city"><strong></strong></li>
+				    	<li id="weather"></li>
+				    	<li id="time"></li>
+				    	
+					</ul>
+				</div>
 			</div>
 
 			<div id="ads" class="clearfix">		
