--- a/San_Diego_Golf/GOLF-WHYP.html
+++ b/San_Diego_Golf/GOLF-WHYP.html
@@ -36,22 +36,21 @@
 			</div>
 
 			<div id="header_title_mt" class="banner">
-				<h1 id="location">San Diego Golf</h1>
+				<h1 id="location">Golfing in San Diego</h1>
+				<div id="weather_tab"><h4>Get local weather</h4></div>
+				<div id="get_weather" class="clearfix">
+					<ul id="result">
+				    	<li id="city"><strong></strong></li>
+				    	<li id="weather"></li>
+				    	<li id="time"></li>
+				    	
+					</ul>
+				</div>
 			</div>
 
 			<div id="ads" class="clearfix">		
 				<a href="https://www.golfnow.com/tee-times/search#qc=GeoLocation&q=&ratetype=all&sortby=Facilities.Weight&view=Course&date=Sat+Mar+24+2018&radius=40&timemax=42&timemin=10&players=0&longitude=-117.15726&latitude=32.71533" target="_blank"><img src="img/golfnow.png"></a>
 				<h4>click here to get current deals on San Diego courses</h4>
-			</div>
-
-			<div id="get_weather" class="clearfix">
-				<div id="result">
-					<div id="answer">it is always golf weather!</div>
-			    	<div id="icon"></div>
-			    	<div id="city"><strong></strong></div>
-			    	<div id="weather"></div>
-			    	<div id="time"></div>
-				</div>
 			</div>
 
 			<div id="section_wrap" class="content clearfix">
