adjusted transitions on get_weather from js to css

--- a/San_Diego_Golf/Coronado.html
+++ b/San_Diego_Golf/Coronado.html
@@ -64,7 +64,10 @@
 							<img class="hole_map" src="img/cor_hole1.png">
 						</div>
 						<div id="hole_text">
-							<p>As mentioned above, this is my home course so I am very familiar with it. I can tell you exactly where all the hazards are because I've been in most of them.  This is a photo from the first tee box. It is a 524 yard Par 5 from the whites with a slight dog-leg right. The fence to the left is the driving range so if you are a lefty and you slice, beware! Same goes for righties who push. To the right are four trees and a bunker. If you can hit a fairly straight drive for about 250 yards you wont havt to worry about neither the fence nor the bunker. From there you have a straight shot to the green which sits with about eight feet of elevation from the fairway. There is a drainage ditch running between you and the hole from this position so toppers be weary! I've definitely done it. To the right of the green is the second of the only two bunkers on the hole. The green runs back down towards the tee box.</p>
+							<h4>Hole #1</h4>
+							<h2>White: 525yard Par 5</h2>
+							<h3>Handicap: 2</h3>
+							<p>This hole is pretty straight forward, not literally, but there isn't much to it.  There is a water hazard to your left right off the tee so if you hit a terrible shot off the tee that is the only way it is in play.  Other than that the fairway </p>
 						</div>
 					</div>
 					<div id="hole_2" class="hole clearfix">
