added IG logo for footer, glass img for background and new div for click prompt

--- a/Art/MyArt.html
+++ b/Art/MyArt.html
@@ -10,25 +10,53 @@
 	<header>
 		<h1>Drawing On Glass</h1>
 	</header>
+	<div id="click">
+		<h5>Click image to expand</h5>
+	</div>
 	<div id="image_container" class="clearfix">
 		<div class="images clearfix">
 			<div class="image image1">
-				<p>Process of Batman</p>
+				<p>Process</p>
 			</div>
-			<div class="image image2"><p>The Dark Knight</p></div>
-			<div class="image image3"><p>The Man of Steel</p></div>
-			<div class="image image4"><p>The Man of Iron</p></div>
-			<div class="image image5"><p>The Incredible Hulk</p></div>
-			<div class="image image6"><p>Donatello</p></div>
-			<div class="image image7"><p>Freddy</p></div>
-			<div class="image image8"><p>Mike Myers</p></div>
-			<div class="image image9"><p>Chucky</p></div>
-			<div class="image image10"><p>Jason</p></div>
-			<div class="image image11"><p>Leatherface</p></div>
-			<div class="image image12"><p>Pennywise</p></div>
+			<div class="image image2">
+				<p>Batman</p>
+			</div>
+			<div class="image image3">
+				<p>Superman</p>
+			</div>
+			<div class="image image4">
+				<p>Ironman</p>
+			</div>
+			<div class="image image5">
+				<p>Hulk</p>
+			</div>
+			<div class="image image6">
+				<p>Donatello</p>
+			</div>
+			<div class="image image7">
+				<p>Freddy</p>
+			</div>
+			<div class="image image8">
+				<p>Michael</p>
+			</div>
+			<div class="image image9">
+				<p>Chucky</p>
+			</div>
+			<div class="image image10">
+				<p>Jason</p>
+			</div>
+			<div class="image image11">
+				<p>Leatherface</p>
+			</div>
+			<div class="image image12">
+				<p>Pennywise</p>
+			</div>
 		</div>
 	</div>
-	<footer><h2>All art was done by me.  You can check them out on my instagram page</h2></footer>
+	<footer>
+		<h2>All art was done by me. <br>  You can check them out on my instagram page</h2>
+		<a href="https://www.instagram.com/rcmartinez54/" target="_blank"><img src="img/ig_logo.png"></a>
+	</footer>
 	<script src="js/art.js"></script>
 </body>
 </html>
