--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -97,9 +97,9 @@
 
         <h2 class="form_heading">Please feel free to contact me.</h2>
 
-        <form method="post" name="contact_form" action="contact-form-handler.php">
+        <form method="GET" name="contact_form" action="mailto:rcmartinez1854@gmail.com">
+          <input type="text" name="subject" placeholder="Subject:">
           <input type="text" name="name" placeholder="Name:">
-          <input type="text" name="company" placeholder="Company:">
           <input type="text" name="email" placeholder="Email Address:">
           <textarea name="message" placeholder="Message:"></textarea>
           <input class="submit_button" type="submit" value="Submit">
