--- a/Raymond Martinez' Resume/Raymond Martinez' Resume.html
+++ b/Raymond Martinez' Resume/Raymond Martinez' Resume.html
@@ -7,6 +7,7 @@
 
       <link rel="stylesheet" href="css/resume.css">
       <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato:400i" rel="stylesheet">
+
     </head>
     
     <body>
@@ -97,8 +98,7 @@
 
         <h2 class="form_heading">Please feel free to contact me.</h2>
 
-        <form method="GET" name="contact_form" action="mailto:rcmartinez1854@gmail.com">
-          <input type="text" name="subject" placeholder="Subject:">
+        <form method="post" name="contact_form" action="contact-form-handler.php">
           <input type="text" name="name" placeholder="Name:">
           <input type="text" name="email" placeholder="Email Address:">
           <textarea name="message" placeholder="Message:"></textarea>
@@ -122,6 +122,7 @@
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="JS/resume.js"></script>
+      <script src="js/form.js"></script>
 
     </body>
   </html>
