--- a/San_Diego_Golf/Bonita.html
+++ b/San_Diego_Golf/Bonita.html
@@ -36,7 +36,16 @@
 			</div>
 
 			<div id="header_title_bonita" class="banner">
-				<h1 id="location">San Diego Golf</h1>
+				<h1 id="location">Golfing in San Diego</h1>
+				<div id="weather_tab"><h4>Get local weather</h4></div>
+				<div id="get_weather" class="clearfix">
+					<p>X</p>
+					<ul id="result">
+				    	<li id="city"><strong></strong></li>
+				    	<li id="weather"></li>
+				    	<li id="time"></li>
+					</ul>
+				</div>
 			</div>
 
 			<div id="section_wrap" class="content clearfix">
