--- a/San_Diego_Golf/Mission_Bay.html
+++ b/San_Diego_Golf/Mission_Bay.html
@@ -36,8 +36,16 @@
 			</div>
 
 			<div id="header_title_mb" class="banner">
-				<h1 id="location">San Diego Golf</h1>
-				<h2>Come and play under the lights!</h2>
+				<h1 id="location">Golfing in San Diego</h1>
+				<div id="weather_tab"><h4>Get local weather</h4></div>
+				<div id="get_weather" class="clearfix">
+					<p>X</p>
+					<ul id="result">
+				    	<li id="city"><strong></strong></li>
+				    	<li id="weather"></li>
+				    	<li id="time"></li>
+					</ul>
+				</div>
 			</div>
 
 			<div id="ads" class="clearfix">		
