changed alt to uppercase and added if else if statements to modal

--- a/Art/MyArt.html
+++ b/Art/MyArt.html
@@ -17,40 +17,40 @@
 	<div id="image_container" class="clearfix">
 		<div id="images" class="clearfix">
 			<div class="image">
-				<img src="img/Donatello.png" alt="Donatello">
+				<img src="img/Donatello.png" alt="DONATELLO" style="color: purple">
 			</div>
 			<div class="image">
-				<img src="img/Superman.png" alt="Superman">
+				<img src="img/Superman.png" alt="SUPERMAN">
 			</div>
 			<div class="image">
-				<img src="img/Hulk.png" alt="Hulk">
+				<img src="img/Hulk.png" alt="HULK">
 			</div>
 			<div class="image">
-				<img src="img/Iron_Man.png" alt="IronMan">
+				<img src="img/Iron_Man.png" alt="IRONMAN">
 			</div>
 			<div class="image">
-				<img src="img/Batman_process.png" alt="Batman Process">
+				<img src="img/Batman_process.png" alt="BATMAN PROCESS">
 			</div>
 			<div class="image">
-				<img src="img/Batman.png" alt="Batman">
+				<img src="img/Batman.png" alt="BATMAN">
 			</div>
 			<div class="image">
-				<img src="img/Freddy.png" alt="Freddy">
+				<img src="img/Freddy.png" alt="FREDDY">
 			</div>
 			<div class="image">
-				<img src="img/Myers.png" alt="Michael Myers">
+				<img src="img/Myers.png" alt="MICHAEL MYERS">
 			</div>
 			<div class="image">
-				<img src="img/Chucky.png" alt="Chucky">
+				<img src="img/Chucky.png" alt="CHUCKY">
 			</div>
 			<div class="image">
-				<img src="img/Jason.png" alt="Jason">
+				<img src="img/Jason.png" alt="JASON">
 			</div>
 			<div class="image">
-				<img src="img/Leatherface.png" alt="Leatherface">
+				<img src="img/Leatherface.png" alt="LEATHERFACE">
 			</div>
 			<div class="image">
-				<img src="img/Pennywise.png" alt="Pennywise">
+				<img src="img/Pennywise.png" alt="PENNYWISE">
 			</div>
 		</div>
 	</div>
