added new pages to Ed Harris Golf

--- a/Ed Harris Golf/Golf_Schools.html
+++ b/Ed Harris Golf/Golf_Schools.html
@@ -7,7 +7,7 @@
 
 </head>
 <body class="clearfix">
-	<div id="content_wrap">
+	<div id="schools_content_wrap">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
@@ -32,18 +32,41 @@
 			</ul>
 		</nav>
 		<div>
-			<h1>"Come Experience Just How Much Fun Golf Can Be."</h1>
+			<h1>Golf Schools</h1>
 		</div>
-		<div class="left_content">
-			<p>
-				At the Ed Harris School of Golf, all instructional programs reflect a thorough and complete understanding of today's modern golf swings. So no matter what your ability, an emphasis on the fundamentals promises you a positive learning experience. You can expect the highest level of golf instruction at the fairest price. Located at the popular National City Golf Course in the South Bay, you're only minutes away from putting the fun back in your game! So what are you waiting for ? All lesson plans come with a full 100% Money Back Satisfaction Gurantee ! Come experience just how much fun golf can be !
+		<div class="schools_wrap clearfix">
+			<div class="left_content">
+				<h2>
+					Half Day Golf School
+				</h2>
+				<p>
+					Class is designed for newer players who want to get a better feel for the game of golf.  Class fee is $325 and includes four hours of private instruction and covers the fundamentals of putting, chipping, pitching and the full swing.  Everything the new player needs to get started.
+				</p>
+				<h2>
+					One Day Golf School
+				</h2>
+				<p>
+					Class is designed for beginner to intermediate players who want to develop their game to the next level. Spend four hours in the morning with your private instructor working on the four major shots in golf. After a nice lunch at the club lounge you'll now go to the course to play nine holes with your professional. This gives you an oppourtunity to apply all of the great things you learned that morning. Class fee is $595 and includes four hours of private instruction, lunch and play. Class covers putting, short game, full swing and course management. One of our most popular classes. 
+				</p>
+				<h2>
+					Two Day Golf School
+				</h2>
+				<p>
+					By far our most popular class, it is designed for the serious player who wants to lower their handicap and have a better understanding of how to play the course in the most efficient manner.  Each day, you will spend four hours with your instructor working on the major shots in golf.  After lunch you and your professional will go to the course to work on application and course management.  Fee is $995 and includes putting, chipping, pitching, distance wedges, bunkers and course management.  Also includes a video evaluation of your golf swing.
+				</p>
+			</div>
+		
+			<div class="right_content">
+				<div class="top_image">
+					<img src="img/students.jpg">
+					<p>Come out and join us!</p>
+				</div>
+				<div class="bottom_image">
+					<img src="img/students2.jpg">
+					<p>Enroll today!</p>
+				</div>	
+			</div>
 
-			</p>
-		</div>
-		<div class="right_content">
-			
-			<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Professional_Profile.html"><img src="img/ed5.jpg"></a>
-			<p>Click image to learn more about Ed!</p>
 		</div>
 	</div>
 
