--- a/Ed Harris Golf/Lessons.html
+++ b/Ed Harris Golf/Lessons.html
@@ -7,7 +7,7 @@
 
 </head>
 <body class="clearfix">
-	<div id="content_wrap">
+	<div id="lessons_content_wrap">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
@@ -32,18 +32,30 @@
 			</ul>
 		</nav>
 		<div>
-			<h1>"Come Experience Just How Much Fun Golf Can Be."</h1>
+			<h1>Playing Lesson</h1>
 		</div>
-		<div class="left_content">
-			<p>
-				At the Ed Harris School of Golf, all instructional programs reflect a thorough and complete understanding of today's modern golf swings. So no matter what your ability, an emphasis on the fundamentals promises you a positive learning experience. You can expect the highest level of golf instruction at the fairest price. Located at the popular National City Golf Course in the South Bay, you're only minutes away from putting the fun back in your game! So what are you waiting for ? All lesson plans come with a full 100% Money Back Satisfaction Gurantee ! Come experience just how much fun golf can be !
+		<div class="lessons_wrap clearfix">
+			<div class="left_content">
+				<p>
+					The 9 hole playing lesson is designed to help players of all levels. The focus is to help students fully understand the strategies of playing golf. Learn how to evaluate each situation and manage your game at a brand new level ! Class fee is $195 and includes cart and green fees and a one hour follow up lesson. You too can learn to play and think like a professional !
+				</p>
+				<h3>
+					Topics of discussion include:
+				</h3>
+					<ul>
+						<li>1. Course Management </li> 
+						<li>2. Proper Shot and Club Selection</li>
+						<li>3. Use of Pre Shot Routine</li>
+						<li>4. Individual Hole Evaluation</li>
+						<li>5. Basic Scoring Fundamentals</li> 
+					</ul>
+			</div>
 
-			</p>
-		</div>
-		<div class="right_content">
-			
-			<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Professional_Profile.html"><img src="img/ed5.jpg"></a>
-			<p>Click image to learn more about Ed!</p>
+			<div class="right_content">
+				<img src="img/ed1.jpg">
+				<p>Play and Think Like a Pro!</p>
+			</div>
+
 		</div>
 	</div>
 
