--- a/Ed Harris Golf/Private_Lessons.html
+++ b/Ed Harris Golf/Private_Lessons.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Ed Harris Golf Instruction</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/edHarris.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
 </head>
 <body class="clearfix">
-	<div id="content_wrap">
+	<div id="privateLessons_content_wrap">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
@@ -31,19 +32,57 @@
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Contact.html"><li>Contact</li></a>
 			</ul>
 		</nav>
-		<div>
-			<h1>"Come Experience Just How Much Fun Golf Can Be."</h1>
+		<div class="content_heading">
+			<h1>Private Lessons</h1>
 		</div>
-		<div class="left_content">
-			<p>
-				At the Ed Harris School of Golf, all instructional programs reflect a thorough and complete understanding of today's modern golf swings. So no matter what your ability, an emphasis on the fundamentals promises you a positive learning experience. You can expect the highest level of golf instruction at the fairest price. Located at the popular National City Golf Course in the South Bay, you're only minutes away from putting the fun back in your game! So what are you waiting for ? All lesson plans come with a full 100% Money Back Satisfaction Gurantee ! Come experience just how much fun golf can be !
+		<div class="privateLessons_wrap">
+			<div class="top_content">
+				<p>
+					There's no better way to take your game to the next level than to work with a PGA Professional on a private and personal basis. Private lessons allow you to work "one on one" and are designed to help you improve quickly and effeciently. A great benefit of the series packages is that you can schedule your series any way you like. One lesson a week, two lessons a month, anyway you like it! We'll work with you at a pace that is comfortable with you and your progress is guaranteed or your money back!
 
-			</p>
-		</div>
-		<div class="right_content">
-			
-			<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Professional_Profile.html"><img src="img/ed5.jpg"></a>
-			<p>Click image to learn more about Ed!</p>
+				</p>
+			</div>
+
+			<div class="bottom_left_content">
+				<table>
+					<tr>
+						<th>Lesson Type</th>
+						<th>1/2 Hour</th>
+						<th>1 Hour</th>
+					</tr>
+					<tr>
+						<td class="left_align">Video Evaluation (includes DVD)</td>
+						<td> --- </td>
+						<td>$125.00</td>
+					</tr>
+					<tr>
+						<td class="left_align">1 Private Lesson</td>
+						<td>$50.00</td>
+						<td>$90.00</td>
+					</tr>
+					<tr>
+						<td class="left_align">3 Private Lesson Series</td>
+						<td>$40.00</td>
+						<td>$80.00</td>
+					</tr>
+					<tr>
+						<td class="left_align">5 Private Lesson Series</td>
+						<td>$35.00</td>
+						<td>$70.00</td>
+					</tr>
+					<tr>
+						<td class="left_align">10 Private Lesson Series</td>
+						<td>$30.00</td>
+						<td>$60.00</td>
+					</tr>
+				</table>
+			</div>
+
+			<div class="bottom_right_content">
+				<img src="img/edh2.gif">
+				<p>"Curteous and Professional Instruction"</p>
+			</div>
+
 		</div>
 	</div>
 
