--- a/Ed Harris Golf/Contact.html
+++ b/Ed Harris Golf/Contact.html
@@ -7,7 +7,7 @@
 
 </head>
 <body class="clearfix">
-	<div id="content_wrap">
+	<div id="contact_content_wrap">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
@@ -32,19 +32,31 @@
 			</ul>
 		</nav>
 		<div>
-			<h1>"Come Experience Just How Much Fun Golf Can Be."</h1>
+			<h1>Contact Information</h1>
 		</div>
-		<div class="left_content">
-			<p>
-				At the Ed Harris School of Golf, all instructional programs reflect a thorough and complete understanding of today's modern golf swings. So no matter what your ability, an emphasis on the fundamentals promises you a positive learning experience. You can expect the highest level of golf instruction at the fairest price. Located at the popular National City Golf Course in the South Bay, you're only minutes away from putting the fun back in your game! So what are you waiting for ? All lesson plans come with a full 100% Money Back Satisfaction Gurantee ! Come experience just how much fun golf can be !
+		<div class="contact_info_wrap clearfix">
+			<div class="left_content">
+				<p>
+					National City Golf Course <br>
+					1439 Sweetwater Rd. <br>
+					National City, California 91950
+				</p>
+				<p>
+					Phone Number(s): <br>
+					Tel. (619) 410-5623 <br>
+					Fax. (619) 869-7543 <br>
+				<p>
+					Email address: <br>
+					edharrispga@cox.net
+				</p>
+			</div>
+			<div class="right_content">
+				<img src="img/award.jpg">
+				<p>Award Winning Service!</p>
+			</div>
 
-			</p>
 		</div>
-		<div class="right_content">
-			
-			<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Professional_Profile.html"><img src="img/ed5.jpg"></a>
-			<p>Click image to learn more about Ed!</p>
-		</div>
+		
 	</div>
 
 	<footer class="clearfix">
