--- a/Ed Harris Golf/Professional_Profile.html
+++ b/Ed Harris Golf/Professional_Profile.html
@@ -7,7 +7,7 @@
 
 </head>
 <body class="clearfix">
-	<div id="content_wrap">
+	<div id="content_wrap" class="clearfix">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
@@ -22,13 +22,13 @@
 		</header>
 		<nav class="clearfix">
 			<ul>
-				<li>Home</li>
-				<li>Lessons</li>
-				<li>Playing Lessons</li>
-				<li>Golf Schools</li>
-				<li>Reservations</li>
-				<li>Hours</li>
-				<li>Contact</li>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Ed_Harris_PGA.html"><li>Home</li></a>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Private_Lessons.html"><li>Lessons</li></a>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lessons.html"><li>Playing Lessons</li></a>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Golf_Schools.html"><li>Golf Schools</li></a>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lesson_reservations.html"><li>Reservations</li></a>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/hours.html"><li>Hours</li></a>
+				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Contact.html"><li>Contact</li></a>
 			</ul>
 		</nav>
 		<div>
@@ -38,29 +38,36 @@
 			<p>
 				Ed Harris is a Class A Teaching Professional and a member of the Professionals Golfers Association of America. A native of southern California, Ed has over forty years of teaching and playing experience. He is a veteran of The Golden State Tour and continues to compete as a member of the Southern California Section. Experience includes Head Professional, American Golf Schools Director of Instruction and founder of "Golf In The City Youth Clinics" in San Diego, California. He is also a published author and continues to write articles for many of golf's premier web site and periodicals.
 			</p>
-		</div>
-		<div class="middle_content_profile">
 			<p>
 				Ed is also founder and owner of "Golfers Learning Center", an interactive web site for golfers of all levels. A student of PGA Tour Professional Jess Madero, Ed has developed a complete and thorough understanding of the dynamic's of today's golf swings. His years of experience combined with his commitment to excellence makes Ed one of California's most well respected Teaching Professionals. His fundamental approach to teaching allows him to work with and improve players of all levels.
 			</p>
-		</div>
-		<div class="bottom_content_profile">
 			<p>
 				Over the years, Ed has had the privaledge of working with thousands of golfers, everyone special is their own way. Some names you may recognize, some you may not. Ed Has worked with celebrity golfers such as Alice Cooper, Rick Davies, Stephen Jenkins, Clint Eastwood, Dennis Hopper and Kyle Maclachlan. One thing is for sure. Ed never met a golfer he couldn't help! The one thing we all share is the passion of the game. So, no matter whether you are brand new to the game, a seasoned professional or somewhere in between, one thing is for sure. You can always get better and anyone who wants to improve always will! You have our guarantee on that!
-
 			</p>
 		</div>
-		<div class="right_content_profile">
+		<div class="bottom_content_profile clearfix"> 
+			<div class="star_images">
+				<img src="img/alice.png">
+				<h3>Alice Cooper</h3>
+			</div>
+			<div class="star_images">
+				<img src="img/hopper.jpg">
+				<h3>Dennis Hopper</h3>
+			</div>
+			<div class="star_images">
+				<img src="img/clint.png">
+				<h3>Clint Eastwood</h3>
+			</div>
 			
 		</div>
 	</div>
 
 	<footer class="clearfix">
 		<img src="img/usga3.png">
-		<img class="socMed" src="img/youtube.png">
-		<img class="socMed" src="img/twitter.png">
-		<img class="socMed" src="img/facebook.png">
-		<img class="socMed" src="img/yelp.png">
+		<a href="https://www.youtube.com/user/edharrispga/videos" target="_blank"><img class="socMed" src="img/youtube.png"></a>
+		<a href="https://twitter.com/edharrispga" target="_blank"><img class="socMed" src="img/twitter.png"></a>
+		<a href="https://www.facebook.com/edharrisschoolofgolf" target="_blank"><img class="socMed" src="img/facebook.png"></a>
+		<a href="https://www.yelp.com/biz/ed-harris-school-of-golf-national-city" target="_blank"><img class="socMed" src="img/yelp.png"></a>
 	</footer>
 	
 </body>
