--- a/Ed Harris Golf/hours.html
+++ b/Ed Harris Golf/hours.html
@@ -32,19 +32,29 @@
 			</ul>
 		</nav>
 		<div>
-			<h1>"Come Experience Just How Much Fun Golf Can Be."</h1>
+			<h1>Hours of Instruction</h1>
 		</div>
-		<div class="left_content">
-			<p>
-				At the Ed Harris School of Golf, all instructional programs reflect a thorough and complete understanding of today's modern golf swings. So no matter what your ability, an emphasis on the fundamentals promises you a positive learning experience. You can expect the highest level of golf instruction at the fairest price. Located at the popular National City Golf Course in the South Bay, you're only minutes away from putting the fun back in your game! So what are you waiting for ? All lesson plans come with a full 100% Money Back Satisfaction Gurantee ! Come experience just how much fun golf can be !
-
-			</p>
+		<div class="hours_wrap">
+			<div class="hours_left_content">
+				<p>
+					<strong>Monday - Friday</strong> <br>
+					8:00am - 4:00pm
+				</p>
+				<p>
+					Saturday - Sunday <br>
+					By Appointment Only
+				</p>
+				<p>
+					Monday <br>
+					Closed
+				</p>
+			</div>
+			<div class="hours_right_content">
+				<img src="img/hours_img.jpg">
+				<p>Come and Join the Fun!</p>
+			</div>
 		</div>
-		<div class="right_content">
-			
-			<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Professional_Profile.html"><img src="img/ed5.jpg"></a>
-			<p>Click image to learn more about Ed!</p>
-		</div>
+		
 	</div>
 
 	<footer class="clearfix">
